# icfpc2024

./: README.md
3d_code/: 3d1.txt  3d10.txt  3d11_broken.txt  3d12.txt  3d2.txt  3d3.txt  3d4.txt  3d5.txt  3d6.txt  3d7.txt  3d8.txt  3d9.txt
c-sharp/: LambdaMan.sln
c-sharp/LambdaMan/: LambdaMan.csproj  Program.cs
c-sharp/LambdaMan/Gameloop/: DijkstraFinder.cs  Mover.cs
c-sharp/LambdaMan/Map/: MapParser.cs  ProblemMap.cs  Tile.cs
c-sharp/LambdaMan/Problems/: lambdaman6.txt
haskell/: .gitignore  Makefile  icfpc.cabal
haskell/app/: Main.hs
haskell/src/: IcfpLang.hs
lisp/: .gitignore  Makefile  compile.lisp  eff7_2.lisp  icfpc.asd  main.lisp  run-tests.lisp
lisp/efficiency/: eff10.lisp  eff11.lisp  eff8.lisp  eff9.lisp
lisp/src/: binary-heap.lisp  gui.lisp  icfpc.lisp  icfplang.lisp  lambdaman.lisp  spaceship.lisp  util.lisp
lisp/tests/: test-binary-heap.lisp  test-icfp.lisp  test-spaceship.lisp
python-tools/: brackets.py  decode.py  encode.py  eval3d.py  horner.py  pali_base.py  readme.txt  solve_spaceship.py  submit_string.py  uniques.py
