cabal-version: 3.0


name:           icfpc
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/jandreske/icfpc2024#readme>
homepage:       https://github.com/jandreske/icfpc2024#readme
bug-reports:    https://github.com/jandreske/icfpc2024/issues
author:         Christoph Breitkopf
maintainer:     chbreitkopf@gmail.com
copyright:      2024 Christoph Breitkopf
license:        MIT
build-type:     Simple
extra-source-files:
    README.md

executable icfpc-exe
  main-is: Main.hs
  other-modules:
      IcfpLang
  hs-source-dirs: app, src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.11 && <10
  default-language: Haskell2010
